Clarity: adjusted workspace for better clarity, add auth.js, definition,js and tools.js as a separate files inide /tools, add today's date to AI initial prompt, add todos
Auth:
add GoogleAuth with a keyFile instead of creating a JWT with data extracted from a key file.

Tools:
add getFutureCalendarEvents, add addCalendarEvent that has summary, startTime, duration and description,

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.0",
     "express": "^5.2.1",
+    "googleapis": "^169.0.0",
     "node": "^24.12.0",
+    "node-ical": "^0.22.1",
     "ollama": "^0.6.3"
   }
 }
