--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "cheerio": "^1.1.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "googleapis": "^169.0.0",
     "node": "^24.12.0",
