add openApp, randNumber, sendEmail, searchYt tools

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^169.0.0",
     "node": "^24.12.0",
     "node-ical": "^0.22.1",
+    "nodemailer": "^7.0.12",
     "ollama": "^0.6.3"
   }
 }
