add catFacts tool that uses meowfacts api to find a random cat fun fact, also ollama 3.2b was  exceptionally bad at translating so i added a libretrenslate implementation using docker. Also refactored static answer to actually return something

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "electron": "electron ."
+    "electron": "electron .",
+    "translate:start": "docker compose up -d",
+    "translate:stop": "docker compose down"
   },
   "author": "",
   "license": "ISC",
